tests/snapshots/diagnostic_tests__ui@unknown_property_nested.au.snap
---
source: tests/diagnostic_tests.rs
expression: "unsafe extern \"java\" {\n\t[\"foo\"]\n\ttype Foo {\n\t\t[\"bar\"]\n\t\tstatic let bar: Bar\n\t}\n\n\t[\"bar\"]\n\ttype Bar {\n\t\t[\"baz\"]\n\t\tstatic let baz: String\n\t}\n}\n\nfn main() {\n\tprint(Foo.bar.oops)\n}\n"
input_file: tests/inputs/diagnostics/unknown_property_nested.au
---
Error: Undefined property
    ╭─[ main:16:16 ]
    │
 16 │     print(Foo.bar.oops)
    │           ───┬─── ──┬─  
    │              ╰────────── Value has type `extern('bar')`
    │                     │   
    │                     ╰─── Unknown property `oops`
────╯
